--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+
     "serve": "nodemon server/server.js --ignore components",
+    "postinstall": "webpack -p --config webpack.prod.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+
     "body-parser": "^1.15.0",
     "browser-sync": "^2.12.5",
     "eslint": "^2.8.0",
@@ -27,6 +30,7 @@
     "webpack-hot-middleware": "^2.10.0"
   },
   "devDependencies": {
+
     "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
