--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-
     "serve": "nodemon app.js --ignore components",
     "postinstall": "webpack -p --config webpack.prod.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-server": "babel src/server -d server",
+    "build-client": "babel src/client -d client"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-
+    "babel-preset-es2015": "^6.18.0",
     "body-parser": "^1.15.0",
     "browser-sync": "^2.12.5",
     "eslint": "^2.8.0",
@@ -25,21 +26,22 @@
     "react-redux": "^4.4.5",
     "redux": "^3.4.0",
     "redux-logger": "^2.6.1",
-    "redux-thunk": "^2.0.1",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0"
+    "redux-thunk": "^2.0.1"
   },
   "devDependencies": {
-
-    "babel-core": "^6.7.6",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-latest": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
     "babel-preset-react-hmre": "^1.1.1",
     "browser-sync": "^2.12.5",
     "browser-sync-webpack-plugin": "^1.0.1",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-hot-middleware": "^2.13.2"
   }
 }
