--- a/package.json
+++ b/package.json
@@ -4,44 +4,50 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "nodemon app.js --ignore components",
-    "postinstall": "webpack -p --config webpack.prod.config.js",
+    "serve": "nodemon server/server.js --ignore server",
+    "postinstall": "./node_modules/.bin/webpack -p --config webpack.prod.config.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-server": "babel src/server -d server",
-    "build-client": "babel src/client -d client"
+    "build-server": "./node_modules/.bin/babel ./src --out-dir server"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-preset-es2015": "^6.18.0",
-    "body-parser": "^1.15.0",
-    "browser-sync": "^2.12.5",
-    "eslint": "^2.8.0",
-    "express": "^4.13.4",
-    "method-override": "^2.3.5",
-    "mongoose": "^4.4.12",
-    "react": "^15.0.1",
-    "react-dom": "^15.0.1",
-    "react-redux": "^4.4.5",
-    "redux": "^3.4.0",
-    "redux-logger": "^2.6.1",
-    "redux-thunk": "^2.0.1"
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "babel-loader": "^8.0.5",
+    "body-parser": "",
+    "browser-sync": "",
+    "css-loader": "^2.1.0",
+    "eslint": "",
+    "express": "^4.16.4",
+    "file-loader": "^3.0.1",
+    "method-override": "",
+    "mongoose": "^5.4.5",
+    "node-sass": "^4.11.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
+    "react-router": "^4.3.1",
+    "react-router-redux": "^4.0.8",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.7",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-latest": "^6.16.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-react-hmre": "^1.1.1",
-    "browser-sync": "^2.12.5",
-    "browser-sync-webpack-plugin": "^1.0.1",
-    "react-hot-loader": "^1.3.0",
-    "webpack": "^1.13.0",
-    "webpack-dev-middleware": "^1.8.4",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.13.2"
+    "@babel/cli": "^7.2.3",
+    "@babel/node": "^7.2.2",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-react": "^7.0.0",
+    "browser-sync": "",
+    "browser-sync-webpack-plugin": "",
+    "react-hot-loader": "",
+    "webpack": "^4.28.4",
+    "webpack-cli": "^3.2.0",
+    "webpack-dev-server": "^3.1.14",
+    "webpack-hot-middleware": "",
+    "ws": "3.3.2"
   }
 }
