--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+
     "serve": "nodemon server/server.js --ignore server",
     "postinstall": "./node_modules/.bin/webpack -p --config webpack.prod.config.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-server": "./node_modules/.bin/babel ./src --out-dir server"
+    "build-server": "./node_modules/.bin/babel ./src --out-dir server",
+    "clean" : "./clean.sh"
   },
   "keywords": [],
   "author": "",
@@ -39,6 +41,8 @@
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/node": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/plugin-proposal-decorators": "^7.3.0",
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-react": "^7.0.0",
     "browser-sync": "",
