--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-
     "serve": "nodemon server/server.js --ignore server",
     "postinstall": "./node_modules/.bin/webpack -p --config webpack.prod.config.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-server": "./node_modules/.bin/babel ./src --out-dir server",
-    "clean" : "./clean.sh"
+    "clean": "./clean.sh"
   },
   "keywords": [],
   "author": "",
@@ -23,9 +22,11 @@
     "css-loader": "^2.1.0",
     "eslint": "",
     "express": "^4.16.4",
+    "fetch-node": "^0.0.1",
     "file-loader": "^3.0.1",
     "method-override": "",
     "mongoose": "^5.4.5",
+    "node-fetch": "^2.3.0",
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
